--- a/app/src/main/res/layout/activity_switch_language.xml
+++ b/app/src/main/res/layout/activity_switch_language.xml
@@ -4,7 +4,46 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:ignore="SpUsage">
-    <include layout="@layout/view_base_tool_bar_no_drawer"/>
+
+    <include
+        android:id="@+id/il_tool_bar"
+        layout="@layout/view_base_tool_bar_no_drawer" />
+
+    <ImageView
+        android:id="@+id/image_logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_logo_21"
+        android:padding="@dimen/margin_8"/>
+
+    <LinearLayout
+        android:id="@+id/ll_select_language"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/margin_48"
+        android:background="@color/color_191919_EEEFF0"
+        android:gravity="center_vertical"
+        android:paddingLeft="@dimen/margin_8">
+
+        <ImageView
+            android:id="@+id/ivBack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/margin_8"
+            android:src="@drawable/ic_icon_back_grey" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/text_chose_language"
+            android:textColor="@color/color_BBBBBB_333333"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:layout_width="@dimen/margin_16"
+            android:layout_height="@dimen/margin_16"
+            android:layout_marginLeft="@dimen/margin_10"
+            android:src="@drawable/ic_icon_flag" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,8 +72,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:textColor="@color/color_BBBBBB_333333"
                     android:text="@string/language_cn"
+                    android:textColor="@color/color_BBBBBB_333333"
                     android:textSize="@dimen/textSize14sp" />
 
                 <ImageView
@@ -92,10 +131,10 @@
                 <TextView
                     android:id="@+id/tvVietnam"
                     android:layout_width="0dp"
-                    android:textColor="@color/color_BBBBBB_333333"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/language_vi"
+                    android:textColor="@color/color_BBBBBB_333333"
                     android:textSize="@dimen/textSize14sp" />
 
                 <ImageView
