--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -65,6 +65,7 @@
         <item>@string/recharge_channel_grabpay</item>
         <item>@string/recharge_channel_paymaya</item>
         <item>@string/recharge_channel_admin</item>
+        <item>@string/recharge_betting_station_type</item>
     </string-array>
 
     <string-array name="withdraw_state_array">
@@ -80,5 +81,6 @@
         <item>@string/withdraw_log_type_admin</item>
         <item>@string/withdraw_log_crypto_transfer</item>
         <item>@string/ewallet</item>
+        <item>@string/withdraw_betting_station_type</item>
     </string-array>
 </resources>
