提款增加投注站方式

--- a/app/src/main/res/navigation/withdraw_navigation.xml
+++ b/app/src/main/res/navigation/withdraw_navigation.xml
@@ -8,6 +8,13 @@
         android:id="@+id/withdrawFragment"
         android:name="org.cxct.sportlottery.ui.withdraw.WithdrawFragment"
         android:label="WithdrawFragment">
+        <action
+            android:id="@+id/action_withdrawFragment_to_betstationFragment"
+            app:destination="@+id/BetStationFragment"></action>
     </fragment>
+    <fragment
+        android:id="@+id/BetStationFragment"
+        android:name="org.cxct.sportlottery.ui.withdraw.BetStationFragment"
+        android:label="BetStationFragment"></fragment>
 
 </navigation>
