--- a/app/src/main/res/values/symbol_string.xml
+++ b/app/src/main/res/values/symbol_string.xml
@@ -13,6 +13,7 @@
     <string name="id">ID</string>
     <string name="at">\u0040</string>
     <string name="verse_upper">VS</string>
+    <string name="app">APP</string>
 
 
     <!--  Member Level Page  -->
