--- a/app/src/main/res/layout/dialog_bet_record_detail_list.xml
+++ b/app/src/main/res/layout/dialog_bet_record_detail_list.xml
@@ -240,7 +240,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="end"
                             android:minWidth="70dp"
-                            android:text="@string/remarks"
+                            android:text="@string/log_detail_reason"
                             android:textColor="@color/color_AEAEAE_404040"
                             android:textSize="@dimen/textSize14sp"
                             app:layout_constraintBottom_toBottomOf="parent"
