--- a/app/src/main/res/layout/fragment_credentials_detail.xml
+++ b/app/src/main/res/layout/fragment_credentials_detail.xml
@@ -137,7 +137,7 @@
                     android:autoSizeTextType="uniform"
                     android:gravity="center_vertical"
                     android:maxLines="1"
-                    android:text="@string/identity_birth"
+                    android:text="@string/birth_date"
                     android:textColor="@color/color_BBBBBB_333333"
                     android:textSize="@dimen/textSize13sp"
                     android:textStyle="bold" />
