--- a/app/src/main/res/layout/activity_redenvelope_log.xml
+++ b/app/src/main/res/layout/activity_redenvelope_log.xml
@@ -42,7 +42,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:maxLines="1"
-            android:text="@string/tran_order_no"
+            android:text="@string/log_detail_trans_num_sub"
             android:textColor="@color/color_BBBBBB_333333"
             android:textSize="@dimen/textSize12sp"/>
 
