--- a/app/src/main/res/layout/online_pay_fragment.xml
+++ b/app/src/main/res/layout/online_pay_fragment.xml
@@ -238,10 +238,11 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp">
 
+            <!-- class內設定字串-->
             <TextView
+                android:id="@+id/tv_remark"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/title_tips"
                 android:textColor="@color/color_E44438_e44438"
                 android:textSize="@dimen/textSize12sp" />
 
@@ -252,8 +253,8 @@
                 android:text="@string/money_recharge_hint1"
                 android:textColor="@color/color_E44438_e44438"
                 android:textSize="@dimen/textSize12sp" />
-        </LinearLayout>
 
+        </LinearLayout>
 
         <Button
             android:id="@+id/btn_submit"
