--- a/app/src/main/res/layout/transfer_pay_fragment.xml
+++ b/app/src/main/res/layout/transfer_pay_fragment.xml
@@ -265,7 +265,7 @@
                         android:id="@+id/title_remark"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/remarks"
+                        android:text="@string/log_detail_reason"
                         android:textColor="@color/color_CCCCCC_000000"
                         android:textSize="@dimen/textSize13sp" />
 
