[新增] 新版宣傳首頁 - 賽事比分, 調整聯賽名稱排版

--- a/app/src/main/res/values/symbol_string.xml
+++ b/app/src/main/res/values/symbol_string.xml
@@ -14,6 +14,7 @@
     <string name="at">\u0040</string>
     <string name="verse_upper">VS</string>
     <string name="app">APP</string>
+    <string name="colon">:</string>
 
 
     <!--  Member Level Page  -->
