--- a/app/src/main/res/layout/dialog_age_verify.xml
+++ b/app/src/main/res/layout/dialog_age_verify.xml
@@ -73,6 +73,8 @@
                     android:layout_marginHorizontal="20dp"
                     android:button="@drawable/selector_statement_agree"
                     android:paddingVertical="10dp"
+                    android:paddingStart="6dp"
+                    android:paddingEnd="0dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/view" />
 
@@ -80,7 +82,6 @@
                     android:id="@+id/tv_statement_link"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="6dp"
                     android:layout_marginEnd="20dp"
                     android:gravity="start"
                     android:text="@string/dialog_age_verify_hint_and_terms_conditions"
