--- a/app/src/main/res/drawable/bg_radius_6_white_top.xml
+++ b/app/src/main/res/drawable/bg_radius_6_white_top.xml
@@ -4,5 +4,5 @@
     <corners
         android:topLeftRadius="6dp"
         android:topRightRadius="6dp" />
-    <solid android:color="@color/color_FCFCFC" />
+    <solid android:color="@color/color_2B2B2B_FCFCFC" />
 </shape>
