--- a/app/src/main/res/drawable/effect_edittext_bg_gray.xml
+++ b/app/src/main/res/drawable/effect_edittext_bg_gray.xml
@@ -20,7 +20,7 @@
         <shape android:shape="rectangle">
             <corners android:radius="4dp" />
             <solid android:color="@color/color_191919_FCFCFC" />
-            <stroke android:width="1dp" android:color="@color/color_E0E0E0" />
+            <stroke android:width="1dp" android:color="@color/color_2B2B2B_e2e2e2" />
         </shape>
     </item>
 </selector>
