--- a/app/src/main/res/layout/fragment_bet_station.xml
+++ b/app/src/main/res/layout/fragment_bet_station.xml
@@ -83,6 +83,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="14dp"
+                    android:drawableLeft="@drawable/ic_deduction"
                     android:drawablePadding="5dp"
                     android:fontFamily="@font/helvetica_bold"
                     android:textStyle="bold"
