--- a/app/src/main/res/layout/view_game_tab_match_type_v4.xml
+++ b/app/src/main/res/layout/view_game_tab_match_type_v4.xml
@@ -23,11 +23,11 @@
         app:tabRippleColor="@null"
         tools:layout="@layout/home_cate_tab">
 
-        <com.google.android.material.tabs.TabItem
+        <!--<com.google.android.material.tabs.TabItem
             android:id="@+id/tab_all"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout="@layout/home_cate_tab" />
+            android:layout="@layout/home_cate_tab" />-->
 
         <com.google.android.material.tabs.TabItem
             android:id="@+id/tab_inPlay"
