[調整] 新版宣傳首頁 - UI校稿調整

--- a/app/src/main/res/layout/publicity_new_recommend_item.xml
+++ b/app/src/main/res/layout/publicity_new_recommend_item.xml
@@ -271,7 +271,7 @@
                     android:layout_marginEnd="@dimen/margin_6"
                     android:background="@drawable/bg_publicity_recommend_count"
                     android:drawablePadding="1dp"
-                    android:gravity="start"
+                    android:gravity="center"
                     android:minWidth="37dp"
                     android:padding="0dp"
                     android:paddingStart="4dp"
