--- a/app/src/main/res/drawable/bg_gradient_0068d6_0054ac_4dp.xml
+++ b/app/src/main/res/drawable/bg_gradient_0068d6_0054ac_4dp.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <corners android:radius="4dp" />
     <gradient
-        android:startColor="#0054ac"
-        android:endColor="#0068d6"
-        android:angle="135"/>
+        android:startColor="#0065E9"
+        android:endColor="#3B78FF"
+        android:angle="90"/>
 </shape>
