--- a/app/src/main/res/layout/view_publicity_promotion.xml
+++ b/app/src/main/res/layout/view_publicity_promotion.xml
@@ -31,6 +31,7 @@
             android:layout_marginEnd="10dp"
             android:padding="4dp"
             android:text="@string/more"
+            android:textAllCaps="true"
             android:textColor="@color/color_317FFF_0760D4"
             android:textSize="@dimen/textSize12sp" />
     </LinearLayout>
