--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -93,6 +93,7 @@
     <color name="color_666666_999999">@color/color_666666</color>
     <color name="color_212223_F1F7FE">@color/color_212223</color>
     <color name="color_242527_F1F7FE">@color/color_242527</color>
+    <color name="color_303030_ecedef">@color/color_303030</color>
 
 
     <color name="color_FFFFFF_DE000000">@color/color_FFFFFF</color>
