--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -212,6 +212,7 @@
     <color name="color_666666_999999">@color/color_999999</color>
     <color name="color_212223_F1F7FE">@color/color_F1F7FE</color>
     <color name="color_242527_F1F7FE">@color/color_F1F7FE</color>
+    <color name="color_303030_ecedef">@color/color_ECEDEF</color>
 
 
     <color name="color_FFFFFF_DE000000">@color/color_DE000000</color>
