--- a/app/src/main/res/layout/publicity_promotion_item.xml
+++ b/app/src/main/res/layout/publicity_promotion_item.xml
@@ -8,7 +8,7 @@
     android:layout_marginVertical="@dimen/margin_4"
     app:cardBackgroundColor="@color/transparent"
     app:cardCornerRadius="@dimen/margin_6"
-    app:cardElevation="@dimen/margin_2"
+    app:cardElevation="0dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
