--- a/app/src/main/res/layout/view_publicity_menu.xml
+++ b/app/src/main/res/layout/view_publicity_menu.xml
@@ -146,11 +146,11 @@
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:visibility="gone"
-        tools:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/ivThirdGame"
         app:layout_constraintEnd_toEndOf="@+id/ivThirdGame"
         app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toTopOf="@+id/ivThirdGame">
+        app:layout_constraintTop_toTopOf="@+id/ivThirdGame"
+        tools:visibility="visible">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -165,6 +165,7 @@
             android:src="@drawable/ic_e_games" />
 
         <TextView
+            android:id="@+id/tvNewGamesBeta"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="1dp"
@@ -172,7 +173,8 @@
             android:text="@string/new_games_beta"
             android:textColor="@color/color_317FFF_0760D4"
             android:textSize="@dimen/textSize10sp"
-            tools:ignore="SpUsage" />
+            tools:ignore="SpUsage"
+            tools:visibility="visible" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -189,7 +191,7 @@
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:visibility="gone"
-        tools:visibility="visible"
+        tools:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/ivThirdGame"
         app:layout_constraintEnd_toEndOf="@+id/ivThirdGame"
         app:layout_constraintStart_toStartOf="@+id/guideline"
