--- a/app/src/main/res/layout/view_publicity_menu.xml
+++ b/app/src/main/res/layout/view_publicity_menu.xml
@@ -177,6 +177,7 @@
             tools:visibility="visible" />
 
         <ImageView
+            android:id="@+id/ivPlayNow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/play_btn" />
