調整投注站提款邏輯與顏色

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -42,6 +42,7 @@
     <color name="color_F75452_b73a20">@color/color_F75452</color>
     <color name="color_FFFFFF_FFFFFF">@color/color_FFFFFF</color>
     <color name="color_191919_FCFCFC">@color/color_191919</color>
+    <color name="color_1C1C1C_FAFAFA">@color/color_1C1C1C</color>
     <color name="color_141414_F3F4F5">@color/color_141414</color>
     <color name="color_141414_f3f3f3">@color/color_141414</color>
     <color name="color_242424_f2f2f2">@color/color_242424</color>
