--- a/app/src/main/res/layout/fragment_bet_station.xml
+++ b/app/src/main/res/layout/fragment_bet_station.xml
@@ -80,6 +80,7 @@
 
                 <!-- 扣除金额 -->
                 <TextView
+                    android:id="@+id/tv_commission_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="14dp"
@@ -166,14 +167,15 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:paddingHorizontal="18dp"
-                android:paddingVertical="20dp">
+                android:paddingTop="20dp"
+                android:paddingBottom="10dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:drawableLeft="@drawable/ic_map"
@@ -185,12 +187,12 @@
                         android:text="@string/select_area" />
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
                         android:layout_weight="1"
                         android:drawableLeft="@drawable/ic_building"
                         android:drawablePadding="5dp"
+                        android:layout_marginLeft="7dp"
                         android:fontFamily="@font/helvetica_bold"
                         android:textStyle="bold"
                         android:textSize="16sp"
@@ -207,7 +209,8 @@
                         android:layout_width="0dp"
                         android:layout_height="44dp"
                         android:layout_weight="1"
-                        android:background="@color/color_2B2B2B_FCFCFC"
+                        android:background="@drawable/bg_radius_4_button_white"
+
                         app:defaultStatusText="@string/waiting" />
 
                     <org.cxct.sportlottery.ui.component.StatusSpinnerView
@@ -216,7 +219,7 @@
                         android:layout_height="44dp"
                         android:layout_weight="1"
                         android:layout_marginLeft="7dp"
-                        android:background="@color/color_2B2B2B_FCFCFC"
+                        android:background="@drawable/bg_radius_4_button_white"
                         app:defaultStatusText="@string/waiting" />
                 </LinearLayout>
 
@@ -224,7 +227,7 @@
                     android:id="@+id/rv_station"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/color_191919_FCFCFC"
+                    android:background="@drawable/bg_radius_4_view_1c1c1c_fafafa"
                     android:layout_marginTop="@dimen/margin_8"
                     android:padding="@dimen/margin_8"
                     tools:listitem="@layout/item_bet_station"
@@ -291,7 +294,6 @@
                             android:textSize="22sp" />
                     </LinearLayout>
                 </FrameLayout>
-
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
@@ -393,12 +395,44 @@
                     app:drawableStartCompat="@drawable/ic_error_tip"
                     tools:text="@string/please_input_account"
                     tools:visibility="visible" />
-            </LinearLayout>
 
-            <include
+            </LinearLayout>
+            <LinearLayout
                 android:id="@+id/lin_empty"
-                layout="@layout/view_no_record"
-                android:visibility="gone" />
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center_horizontal"
+                android:layout_marginHorizontal="18dp"
+                android:paddingTop="20dp"
+                android:paddingBottom="10dp"
+                android:background="@drawable/bg_radius_4_view_1c1c1c_fafafa"
+                >
+
+                <ImageView
+                    android:id="@+id/list_no_record_img"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="10dp"
+                    android:src="@drawable/ic_img_no_record"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <TextView
+                    android:id="@+id/list_no_record_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:text="@string/finance_list_no_record"
+                    android:textColor="@color/color_BBBBBB_333333"
+                    android:textSize="@dimen/textSize14sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="@id/list_no_record_img"
+                    app:layout_constraintStart_toStartOf="@id/list_no_record_img"
+                    app:layout_constraintTop_toBottomOf="@id/list_no_record_img" />
+
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/btn_submit"
