--- a/app/src/main/res/navigation/identity_navigation.xml
+++ b/app/src/main/res/navigation/identity_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/identity_navigation"
-    app:startDestination="@id/verifyIdentityFragment">
+    app:startDestination="@id/verifyKYCFragment">
 
     <fragment
         android:id="@+id/verifyIdentityFragment"
@@ -47,4 +47,31 @@
             app:popExitAnim="@anim/exit_to_right"
             />
     </fragment>
+
+    <fragment
+        android:id="@+id/verifyKYCFragment"
+        android:name="org.cxct.sportlottery.ui.profileCenter.identity.VerifyKYCFragment"
+        android:label="VerifyKYCFragment"
+        tools:layout="@layout/fragment_verify_identity_kyc">
+
+        <action
+            android:id="@+id/action_verifyKYCFragment_to_verifyStatusFragment"
+            app:destination="@id/verifyStatusFragment"
+            app:enterAnim="@anim/enter_from_right"
+            app:popExitAnim="@anim/exit_to_right" />
+
+    </fragment>
+
+    <fragment
+        android:id="@+id/verifyStatusFragment"
+        android:name="org.cxct.sportlottery.ui.profileCenter.identity.VerifyStatusFragment"
+        android:label="VerifyStatusFragment"
+        tools:layout="@layout/fragment_verify_status">
+
+        <action
+            android:id="@+id/action_verifyStatusFragment_to_verifyKYCFragment"
+            app:destination="@id/verifyKYCFragment" />
+
+    </fragment>
+
 </navigation>
