--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -31,6 +31,7 @@
     <color name="color_F75452_b73a20">@color/color_F75452</color>
     <color name="color_FFFFFF_FFFFFF">@color/color_FFFFFF</color>
     <color name="color_191919_FCFCFC">@color/color_191919</color>
+    <color name="color_000000_FCFCFC">@color/color_000000</color>
     <color name="color_141414_F3F4F5">@color/color_141414</color>
     <color name="color_141414_f3f3f3">@color/color_141414</color>
     <color name="color_242424_f2f2f2">@color/color_242424</color>
