--- a/app/src/main/res/layout/activity_money_recharge.xml
+++ b/app/src/main/res/layout/activity_money_recharge.xml
@@ -95,17 +95,15 @@
 
             </ScrollView>
 
-            <!--根據需求先隱藏，確定不用可刪-->
-            <!--20220406 只有宣傳頁、主頁需顯示-->
-            <!--<org.cxct.sportlottery.ui.common.ServiceFloatingButton
-                android:visibility="gone"
+            <!--20220802 充值畫面增加聯繫在線客服的入口，不需要判斷是否隱藏-->
+            <org.cxct.sportlottery.ui.common.ServiceFloatingButton
                 android:id="@+id/btn_floating_service"
                 android:layout_width="match_parent"
                 android:layout_height="44dp"
                 android:layout_marginBottom="14dp"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
-                app:layout_constraintBottom_toBottomOf="parent" />-->
+                app:layout_constraintBottom_toBottomOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.scwang.smart.refresh.layout.SmartRefreshLayout>
