--- a/app/src/main/res/layout/view_bottom_navigation_sport.xml
+++ b/app/src/main/res/layout/view_bottom_navigation_sport.xml
@@ -136,8 +136,7 @@
         android:id="@+id/line_shadow"
         android:layout_width="match_parent"
         android:layout_height="6dp"
-        android:background="@drawable/bg_gradient_bottom_sheet_shadow_light"
-        app:layout_constraintBottom_toTopOf="@id/viewBottom" />
+        android:background="@drawable/bg_gradient_bottom_sheet_shadow_light" />
 
     <org.cxct.sportlottery.ui.game.bottomNavigation.SportBottomNavigation
         android:id="@+id/sport_bottom_navigation"
