[Add] KYC越南翻譯+有些被偷改的翻譯

--- a/app/src/main/res/layout/fragment_verify_status.xml
+++ b/app/src/main/res/layout/fragment_verify_status.xml
@@ -38,7 +38,7 @@
             android:visibility="invisible"
             tools:visibility="visible"
             android:text="@string/kyc_verify_successful"
-            tools:text="@string/kyc_service_verify" />
+            tools:text="@string/kyc_you_wait" />
 
 
         <Button
