[Fix] 27911 【Android】它不接受键盘上除数字以外的任何字符 It doesn't accept any characters on the keyboard other than numbers

--- a/app/src/main/res/layout/content_verify_identity_kyc.xml
+++ b/app/src/main/res/layout/content_verify_identity_kyc.xml
@@ -156,7 +156,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginStart="12dp"
             android:background="@null"
-            android:inputType="number"
+            android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
             android:letterSpacing="0.05"
             android:textColor="@color/color_cccccc"
             android:textColorHint="@color/color_cccccc"
