--- a/app/src/main/res/layout/content_verify_identity_kyc.xml
+++ b/app/src/main/res/layout/content_verify_identity_kyc.xml
@@ -158,9 +158,10 @@
             android:background="@null"
             android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
             android:letterSpacing="0.05"
-            android:textColor="@color/color_cccccc"
+            android:textColor="@color/color_0760D4"
             android:textColorHint="@color/color_cccccc"
-            android:textSize="@dimen/textSize12sp"
+            android:textSize="@dimen/textSize14sp"
+            android:textStyle="bold"
             android:hint="@string/kyc_enter_id_num"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
