[Refactor] 文字顏色調整

--- a/app/src/main/res/layout/content_verify_identity_kyc.xml
+++ b/app/src/main/res/layout/content_verify_identity_kyc.xml
@@ -158,7 +158,7 @@
             android:background="@null"
             android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
             android:letterSpacing="0.05"
-            android:textColor="@color/color_0760D4"
+            android:textColor="@color/color_317FFF_0760D4"
             android:textColorHint="@color/color_cccccc"
             android:textSize="@dimen/textSize14sp"
             android:textStyle="bold"
