--- a/app/src/main/res/layout/activity_profile_center.xml
+++ b/app/src/main/res/layout/activity_profile_center.xml
@@ -19,10 +19,10 @@
             android:orientation="vertical"
             tools:context=".ui.profileCenter.ProfileCenterActivity">
 
-            <include
-                layout="@layout/view_toolbar_main"
-                android:layout_width="match_parent"
-                android:layout_height="50dp" />
+            <!--            <include-->
+            <!--                layout="@layout/view_toolbar_main"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="50dp" />-->
 
             <ScrollView
                 android:layout_width="match_parent"
@@ -38,8 +38,43 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@color/color_191919_FCFCFC"
+                        android:background="@drawable/ic_personal_bg"
                         android:orientation="vertical">
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="25dp">
+
+                            <ImageView
+                                android:id="@+id/iv_menu"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="16dp"
+                                android:layout_marginEnd="16dp"
+                                android:src="@drawable/ic_icon_menu" />
+
+
+                            <ImageView
+                                android:id="@+id/iv_notice"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="16dp"
+                                android:layout_marginEnd="16dp"
+                                android:layout_toLeftOf="@+id/iv_customer_service"
+                                android:src="@drawable/ic_icon_massage02" />
+
+                            <ImageView
+                                android:id="@+id/iv_customer_service"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentRight="true"
+                                android:layout_marginStart="16dp"
+                                android:layout_marginEnd="16dp"
+                                android:src="@drawable/ic_icon_customer02" />
+
+                        </RelativeLayout>
+
 
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="match_parent"
@@ -125,6 +160,7 @@
                                 android:layout_marginEnd="8dp"
                                 android:scaleType="centerCrop"
                                 android:src="@drawable/ic_logout"
+                                android:visibility="gone"
                                 app:layout_constraintRight_toRightOf="parent"
                                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -136,7 +172,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginHorizontal="@dimen/margin_20"
                             android:layout_marginTop="@dimen/margin_16"
-                            android:background="@drawable/bg_amount_yellow_gradient"
+                            android:background="@drawable/ic_personal_wallet_bg"
                             android:gravity="center_vertical"
                             android:minHeight="35dp"
                             android:orientation="horizontal"
@@ -144,16 +180,33 @@
                             android:paddingTop="@dimen/margin_10"
                             android:paddingBottom="@dimen/margin_10">
 
+
+                            <TextView
+                                android:id="@+id/tv_funds"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:drawableLeft="@drawable/ic_icon_wallet_small"
+                                android:drawablePadding="@dimen/margin_3"
+                                android:text="总资产"
+                                android:textColor="@color/color_ECCD86"
+                                android:textSize="@dimen/margin_14"
+                                app:layout_constraintBottom_toBottomOf="@+id/tv_account_balance"
+                                app:layout_constraintTop_toTopOf="@+id/tv_account_balance"
+                                tools:ignore="MissingConstraints" />
+
                             <TextView
                                 android:id="@+id/tv_currency_type"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_marginEnd="@dimen/margin_3"
                                 android:fontFamily="@font/helvetica_bold"
-                                android:textColor="@color/color_643C00"
-                                android:textSize="@dimen/textSize20sp"
+                                android:textColor="@color/color_ECCD86"
+                                android:textSize="@dimen/textSize16sp"
                                 android:textStyle="bold"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintEnd_toStartOf="@+id/tv_account_balance"
+                                app:layout_constraintBottom_toBottomOf="@+id/tv_account_balance"
+                                app:layout_constraintTop_toTopOf="@+id/tv_account_balance"
+                                tools:ignore="MissingConstraints"
                                 tools:text="P" />
 
                             <TextView
@@ -162,31 +215,15 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="@dimen/margin_5"
                                 android:fontFamily="@font/roboto_medium_numbers"
-                                android:gravity="center_vertical"
-                                android:textColor="@color/color_643C00"
+                                android:textColor="@color/color_ECCD86"
                                 android:textSize="@dimen/textSize20sp"
                                 android:textStyle="bold"
-                                app:layout_constraintEnd_toStartOf="@+id/ivNotice"
                                 app:autoSizeMaxTextSize="20dp"
                                 app:autoSizeMinTextSize="2dp"
-                                app:layout_constraintStart_toEndOf="@+id/tv_currency_type"
+                                app:layout_constraintEnd_toStartOf="@+id/btn_refresh_money"
                                 app:layout_constraintTop_toTopOf="parent"
                                 tools:text="87,547,000.000" />
 
-                            <ImageButton
-                                android:id="@+id/ivNotice"
-                                android:layout_width="wrap_content"
-                                android:layout_height="16dp"
-                                android:background="@null"
-                                android:contentDescription="@null"
-                                android:padding="6dp"
-                                android:src="@drawable/ic_info_white_inside"
-                                android:visibility="gone"
-                                app:layout_constraintBottom_toBottomOf="@+id/tv_account_balance"
-                                app:layout_constraintEnd_toStartOf="@+id/btn_refresh_money"
-                                app:layout_constraintTop_toTopOf="@+id/tv_account_balance"
-                                app:tint="@color/color_FFFFFF_FFFFFF"
-                                tools:visibility="visible" />
 
                             <ImageButton
                                 android:id="@+id/btn_refresh_money"
@@ -196,10 +233,12 @@
                                 android:contentDescription="@null"
                                 android:padding="@dimen/margin_4"
                                 android:scaleType="fitXY"
-                                android:src="@drawable/ic_refresh_brown"
                                 app:layout_constraintBottom_toBottomOf="@+id/tv_account_balance"
+                                app:layout_constraintTop_toTopOf="@+id/tv_account_balance"
+                                android:src="@drawable/ic_refresh_brown"
                                 app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintTop_toTopOf="@+id/tv_account_balance" />
+                                android:layout_marginStart="@dimen/margin_4"
+                           />
 
                         </androidx.constraintlayout.widget.ConstraintLayout>
 
